sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:66: error: forward reference extends over definition of variable posEchange
  var posEchange = posTrou;
                   ^SelectBaseball:66: error: forward reference extends over definition of variable baseTrou
  var posEchange = posTrou;
                   ^SelectBaseball:66: error: forward reference extends over definition of variable posTrou
  var posEchange = posTrou;
                   ^